# black-hole-theory-daily-new

./: IMPLEMENTATION_REPORT.md  README.md  pyproject.toml
GitHub-upload-ready/: LICENSE  README.md  gitignore.txt  requirements-lock.txt  update_and_deploy.yml
GitHub-upload-ready/config/: settings.yaml
GitHub-upload-ready/static/: app.js
GitHub-upload-ready/templates/: archive.html  base.html  index.html  paper_card.html
config/: settings.yaml  topics.yaml
data/: state.json
data/normalized/: 20260713T125332Z.json  20260714T052102Z.json  20260714T060718Z.json  20260715T073607Z.json  20260716T001449Z.json  20260717T001655Z.json  20260718T001326Z.json  20260719T001401Z.json  20260720T001704Z.json  20260721T001608Z.json  20260722T001231Z.json  20260723T001656Z.json  20260724T001537Z.json
data/papers/: arxiv_2110.09834.json  arxiv_2411.00532.json  arxiv_2504.20701.json  arxiv_2505.17790.json  arxiv_2505.23483.json  arxiv_2506.15767.json  arxiv_2509.08657.json  arxiv_2509.10921.json  arxiv_2509.25322.json  arxiv_2510.12198.json  arxiv_2510.12786.json  arxiv_2510.13213.json  arxiv_2510.13552.json  arxiv_2510.23223.json  arxiv_2510.24857.json  arxiv_2511.03867.json  arxiv_2511.07726.json  arxiv_2511.10430.json  arxiv_2511.21488.json  arxiv_2512.13252.json  arxiv_2512.14883.json  (+144 more)
static/: app.js  styles.css
templates/: base.html  methodology.html  paper_card.html
tests/: conftest.py  test_arxiv.py  test_cache.py  test_cli.py  test_deduplicate.py  test_deepseek.py  test_filter.py  test_inspire.py  test_llm_schema.py  test_render.py  test_translation_validation.py
(+3845 files in other folders)
