[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-hole-theory-daily"
version = "0.1.0"
description = "黑洞与引力理论每日论文精选静态网站"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "feedparser>=6.0.11,<7",
  "jinja2>=3.1.4,<4",
  "openai>=1.58,<3",
  "pydantic>=2.10,<3",
  "python-dateutil>=2.9,<3",
  "PyYAML>=6.0.2,<7",
  "requests>=2.32.3,<3",
  "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12.20241230",
  "types-requests>=2.32.0.20241016",
]

[project.scripts]
theory-daily = "theory_daily.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["theory_daily"]
mypy_path = "src"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["dateutil.*", "feedparser.*"]
ignore_missing_imports = true
